--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,25 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
+
+<div>
+    IsHttps? @Context.Request.IsHttps
+</div>
+<div>
+    Host: @Context.Request.Host
+</div>
+
+<h2>Headers</h2>
+<table>
+    <tbody>
+        @foreach (var header in Context.Request.Headers)
+        {
+            <tr>
+                <td>@header.Key</td>
+                <td>@header.Value</td>
+            </tr>
+        }
+    </tbody>
+</table>
+
