--- a/Views/Home/HtmxTest.cshtml
+++ b/Views/Home/HtmxTest.cshtml
@@ -9,6 +9,9 @@
 <p>
     <a href="https://htmx.org/">https://htmx.org/</a>
 </p>
+<p>
+    <a href="https://docs.microsoft.com/en-us/aspnet/core/mvc/models/validation?view=aspnetcore-6.0">Model validation in ASP.NET Core MVC | Microsoft Docs</a>
+</p>
 
 <p>
     <button hx-post="SimplePartial" hx-swap="outerHTML">
