--- a/Views/Home/EditPersonPartial.cshtml
+++ b/Views/Home/EditPersonPartial.cshtml
@@ -43,6 +43,7 @@
 <script>
     // TODO: Does this need to be called on form reload?
     // TODO: Should we call validator.destroy()? is there a unobtrusiveValidation equivalent?
+    // TODO: Have a look at https://blogs.windows.com/msedgedev/2021/12/09/debug-memory-leaks-detached-elements-tool-devtools/
     document.getElementById("frmEditPersonPartial").addEventListener("htmx:beforeRequest", function (evt) {
         if ($(evt.target).valid()) {
             // Disable submit button while submitting
