--- a/Views/Home/EditPersonPartial.cshtml
+++ b/Views/Home/EditPersonPartial.cshtml
@@ -44,6 +44,7 @@
     // TODO: Does this need to be called on form reload?
     // TODO: Should we call validator.destroy()? is there a unobtrusiveValidation equivalent?
     // TODO: Have a look at https://blogs.windows.com/msedgedev/2021/12/09/debug-memory-leaks-detached-elements-tool-devtools/
+    // TODO: See also https://docs.microsoft.com/en-us/aspnet/core/mvc/models/validation?view=aspnetcore-6.0
     document.getElementById("frmEditPersonPartial").addEventListener("htmx:beforeRequest", function (evt) {
         if ($(evt.target).valid()) {
             // Disable submit button while submitting
