--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -12,6 +12,9 @@
 <div>
     Host: @Context.Request.Host
 </div>
+<div>
+    MachineName: @Environment.MachineName
+</div>
 
 <h2>Headers</h2>
 <table>
